--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -28,7 +28,7 @@ extends:
     Artifacts:
     - name: azure_data_cosmos
       releaseInBatch: ${{ parameters.release_azure_data_cosmos }}
-    MatrixConfigs:
+    LiveTestMatrixConfigs:
       - Name: Cosmos_live_test
         Path: sdk/cosmos/live-platform-matrix.json
         Selection: all
