--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -22,6 +22,7 @@ serde.workspace = true
 tracing.workspace = true
 url.workspace = true
 async-lock.workspace = true
+pin-project.workspace = true
 
 [dev-dependencies]
 uuid.workspace = true
