--- a/sdk/cosmos/azure_data_cosmos_tests/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_tests/Cargo.toml
@@ -9,10 +9,12 @@ rust-version.workspace = true
 
 [dependencies]
 azure_data_cosmos = { path = "../azure_data_cosmos", default-features = true }
+azure_core.workspace = true
 
 [dev-dependencies]
 futures.workspace = true
-reqwest.workspace = true
+azure_core_test = { workspace = true, features = ["tracing"] }
+reqwest = {workspace = true, features = ["native-tls"]}
 serde.workspace = true
 serde_json.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
@@ -24,12 +26,18 @@ workspace = true
 
 [features]
 # No default features so CI/local runs choose explicitly.
-default = []
+default = ["key_auth"]
 
 # Test-only toggles that forward to the library crate features.
 key_auth = ["azure_data_cosmos/key_auth"]
 preview_query_engine = ["azure_data_cosmos/preview_query_engine"]
 
+# Local marker features used to include/exclude test modules via `cfg(feature = "...")`.
+# These don't enable anything by themselves; they just control which tests compile/run.
+fast = []
+multi_write = []
+
 # Convenience feature.
-all = ["key_auth", "preview_query_engine"]
+all = ["key_auth", "preview_query_engine", "fast", "multi_write"]
+
 
