--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -21,6 +21,7 @@ async-trait.workspace = true
 azure_core = { workspace = true, features = ["xml"] }
 bytes.workspace = true
 futures.workspace = true
+percent-encoding = "2.3.2"
 pin-project.workspace = true
 serde.workspace = true
 serde_json.workspace = true
@@ -38,6 +39,7 @@ azure_core_test = { workspace = true, features = [
 azure_identity.workspace = true
 azure_storage_blob_test.path = "../azure_storage_blob_test"
 futures.workspace = true
+quick-xml.workspace = true
 rand.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 tracing.workspace = true
