--- a/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
@@ -18,7 +18,7 @@ reqwest = { workspace = true, optional = true }
 futures.workspace = true
 serde_json = { workspace = true, features = ["raw_value"] }
 azure_core.workspace = true
-azure_data_cosmos = { path = "../azure_data_cosmos", features = [ "key_auth", "preview_query_engine" ] }
+azure_data_cosmos = { path = "../azure_data_cosmos", features = [ "key_auth" ] }
 tracing.workspace = true
 tracing-subscriber = { workspace = true, optional = true, features = ["fmt", "env-filter"] }
 
