--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -41,6 +41,7 @@ futures.workspace = true
 rand.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 tracing.workspace = true
+tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 
 [[bench]]
 name = "perf"
