--- a/sdk/identity/azure_identity/tests/tools/deployed_live_test/Cargo.toml
+++ b/sdk/identity/azure_identity/tests/tools/deployed_live_test/Cargo.toml
@@ -7,11 +7,11 @@ publish = false
 [workspace]
 
 [dependencies]
-azure_identity = { path = "../../../" }
-azure_storage_blob = { path = "../../../../../storage/azure_storage_blob" }
-azure_core = { path = "../../../../../core/azure_core" }
-openssl = { version = "0.10", features = ["vendored"]}
+axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "query"] }
+azure_core = { path = "../../../../../core/azure_core", default-features = false, features = ["reqwest"] }
+azure_identity = { path = "../../../", default-features = false }
+azure_storage_blob = { path = "../../../../../storage/azure_storage_blob", default-features = false }
+reqwest = { version = "0.13.1", default-features = false, features = ["rustls"] }
+serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 url = "2.5"
-axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "query"] }
-serde = { version = "1.0", features = ["derive"] }
