add opentelemetry logging info

--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -32,12 +32,15 @@ uuid.workspace = true
 workspace = true
 
 [dev-dependencies]
+azure_core_opentelemetry.workspace = true
 azure_core_test = { workspace = true, features = [
   "tracing",
 ] }
 azure_identity.workspace = true
 azure_storage_blob_test.path = "../azure_storage_blob_test"
 futures.workspace = true
+opentelemetry-stdout = { version = "0.30" }
+opentelemetry_sdk.workspace = true
 rand.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 tracing.workspace = true
