--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -22,6 +22,8 @@ serde.workspace = true
 tracing.workspace = true
 url.workspace = true
 async-lock.workspace = true
+tokio-util = "0.7.16"
+tokio = { version = "1", features = ["rt"] }
 
 [dev-dependencies]
 uuid.workspace = true
