--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ opentelemetry = { version = "0.30", features = ["trace"] }
 opentelemetry_sdk = "0.30"
 opentelemetry-http = "0.30"
 opentelemetry-stdout = "0.30"
+percent-encoding = "2.3"
 pin-project = "1.0"
 proc-macro2 = "1.0.97"
 quick-xml = { version = "0.38.3", features = ["serialize", "serde-types"] }
