--- a/sdk/keyvault/azure_resourcemanager_keyvault/Cargo.toml
+++ b/sdk/keyvault/azure_resourcemanager_keyvault/Cargo.toml
@@ -16,7 +16,9 @@ azure_core = { workspace = true }
 serde = { workspace = true }
 
 [dev-dependencies]
-azure_core_test = { workspace = true }
+azure_core_test = { workspace = true, features = [
+  "tracing",
+] }
 azure_core_test_macros = { workspace = true }
 azure_identity = { workspace = true }
 futures = { workspace = true }
