typo in codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -76,7 +76,7 @@
 # PRLabel: %Event Hubs
 /sdk/eventhubs/          @j7nw4r
 
-% PRLabel: %Event hubs %Storage
+# PRLabel: %Event Hubs %Storage
 /sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/          @j7nw4r @vincenttran-msft @jalauzon-msft
 
 # ServiceLabel: %Event Hubs
