--- a/eng/pipelines/pullrequest.yml
+++ b/eng/pipelines/pullrequest.yml
@@ -7,6 +7,7 @@ pr:
       - feature/*
       - hotfix/*
       - release/*
+      - djurek/*
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
