--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -55,29 +55,32 @@
 ####################
 
 # PRLabel: %Cosmos
-/sdk/cosmos/    @Azure/azure-cosmos-rust-sdk
+/sdk/cosmos/             @Azure/azure-cosmos-rust-sdk
 
-# AzureSdkOwners: @heaths
 # ServiceLabel: %Cosmos
+# AzureSDKOwners: @heaths
 # ServiceOwners: @Pilchie
 
-# PRLabel: %Event Hubs
-/sdk/eventhubs/    @j7nw4r
-
-# AzureSdkOwners: @j7nw4r
-# ServiceLabel: %Event Hubs
-
 # PRLabel: %KeyVault
-/sdk/keyvault/    @Azure/azure-sdk-write-keyvault @heaths
+/sdk/keyvault/           @Azure/azure-sdk-write-keyvault @heaths
 
 # ServiceLabel: %KeyVault
 # ServiceOwners: @Azure/azure-sdk-write-keyvault
 
 # PRLabel: %Storage
-/sdk/storage/    @heaths @jalauzon-msft @LarryOsterman @RickWinter @vincenttran-msft
+/sdk/storage/            @heaths @RickWinter @LarryOsterman @vincenttran-msft @jalauzon-msft
 
-# AzureSdkOwners: @jalauzon-msft @vincenttran-msft
 # ServiceLabel: %Storage
+# AzureSDKOwners: @vincenttran-msft @jalauzon-msft
+
+# PRLabel: %Event Hubs
+/sdk/eventhubs/          @j7nw4r
+
+# PRLabel: %Event Hubs %Storage
+/sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/    @j7nw4r @jalauzon-msft @vincenttran-msft
+
+# ServiceLabel: %Event Hubs
+# AzureSDKOwners: @j7nw4r
 
 ####################
 # Management Libraries
