--- a/sdk/cosmos/azure_data_cosmos_perf/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_perf/Cargo.toml
@@ -19,6 +19,7 @@ futures.workspace = true
 rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sysinfo = "0.33"
 tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
 
 [lints]
