--- a/sdk/cosmos/azure_data_cosmos_perf/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_perf/Cargo.toml
@@ -21,6 +21,7 @@ serde.workspace = true
 serde_json.workspace = true
 sysinfo = "0.33"
 tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
+uuid.workspace = true
 
 [lints]
 workspace = true
