--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,9 +95,9 @@ async-stream = { version = "0.3.6" }
 async-trait = "0.1"
 base64 = "0.22"
 bytes = "1.11.1"
-cargo_metadata = "0.18.1"
+cargo_metadata = "0.23.1"
 clap = { version = "4.5.58", features = ["derive"] }
-criterion = { version = "0.5", features = ["async_tokio"] }
+criterion = { version = "0.8", features = ["async_tokio"] }
 dyn-clone = "1.0"
 fe2o3-amqp = { version = "0.14", features = ["uuid"] }
 fe2o3-amqp-ext = { version = "0.14" }
@@ -106,21 +106,17 @@ fe2o3-amqp-cbs = { version = "0.14" }
 fe2o3-amqp-types = { version = "0.14" }
 flate2 = "1.1.9"
 futures = "0.3"
-getrandom = { version = "0.3" }
+getrandom = { version = "0.4" }
 gloo-timers = { version = "0.3" }
 hmac = { version = "0.12" }
 include-file = { version = "0.5.1", default-features = false }
 openssl = { version = "0.10.75" }
-opentelemetry = { version = "0.31", features = ["trace"] }
-opentelemetry_sdk = "0.31"
-opentelemetry-http = "0.31"
-opentelemetry-stdout = "0.31"
 pin-project = "1.1"
 proc-macro2 = "1.0.106"
-quick-xml = { version = "0.38.4", features = ["serialize", "serde-types"] }
+quick-xml = { version = "0.39.0", features = ["serialize", "serde-types"] }
 quote = "1.0.44"
-rand = "0.9.2"
-rand_chacha = "0.9"
+rand = { version = "0.10.0", features = ["sys_rng"] }
+rand_chacha = "0.10"
 reqwest = { version = "0.13.2", features = [
   "stream",
 ], default-features = false }
@@ -135,7 +131,7 @@ serial_test = "3.3"
 sha2 = { version = "0.10" }
 syn = { version = "2.0.115", features = ["full"] }
 tar = { version = "0.4.44", default-features = false }
-thiserror = "1.0"
+thiserror = "2.0"
 time = { version = "0.3.47", features = [
   "serde-well-known",
   "macros",
@@ -151,7 +147,7 @@ url = "2.5"
 uuid = { version = "1.20", features = ["v4"] }
 wasm-bindgen-futures = "0.4"
 wasm-bindgen-test = "0.3"
-zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
+zip = { version = "7.4.0", default-features = false, features = ["deflate"] }
 
 [workspace.lints.clippy]
 large_futures = "deny"
