--- a/sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/Cargo.toml
+++ b/sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/Cargo.toml
@@ -34,10 +34,11 @@ uuid = { workspace = true, features = ["v4", "serde"] }
 azure_core_opentelemetry.workspace = true
 azure_core_test = { workspace = true, features = ["tracing"] }
 azure_identity.workspace = true
-opentelemetry.workspace = true
+opentelemetry = { version = "0.31", features = ["trace"] }
 opentelemetry-appender-tracing = { version = "0.31" }
+opentelemetry-http = "0.31"
 opentelemetry-stdout = { version = "0.31" }
-opentelemetry_sdk.workspace = true
+opentelemetry_sdk = "0.31"
 tokio.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 
