--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,68 +90,69 @@ path = "sdk/storage/azure_storage_blob"
 version = "0.10.0"
 
 [workspace.dependencies]
-async-lock = "3.0"
-async-stream = { version = "0.3.5" }
+async-lock = "3.4"
+async-stream = { version = "0.3.6" }
 async-trait = "0.1"
 base64 = "0.22"
 bytes = "1.11.1"
-cargo_metadata = "0.18.1"
-clap = { version = "4.5.45", features = ["derive"] }
-criterion = { version = "0.5", features = ["async_tokio"] }
+cargo_metadata = "0.23.1"
+clap = { version = "4.5.58", features = ["derive"] }
+criterion = { version = "0.8", features = ["async_tokio"] }
 dyn-clone = "1.0"
 fe2o3-amqp = { version = "0.14", features = ["uuid"] }
 fe2o3-amqp-ext = { version = "0.14" }
 fe2o3-amqp-management = { version = "0.14" }
 fe2o3-amqp-cbs = { version = "0.14" }
 fe2o3-amqp-types = { version = "0.14" }
-flate2 = "1.1.0"
+flate2 = "1.1.9"
 futures = "0.3"
-getrandom = { version = "0.3" }
+getrandom = { version = "0.4" }
 gloo-timers = { version = "0.3" }
 hmac = { version = "0.12" }
 include-file = { version = "0.5.1", default-features = false }
-openssl = { version = "0.10.72" }
-opentelemetry = { version = "0.30", features = ["trace"] }
-opentelemetry_sdk = "0.30"
-opentelemetry-http = "0.30"
-opentelemetry-stdout = "0.30"
-pin-project = "1.0"
-proc-macro2 = "1.0.97"
-quick-xml = { version = "0.38.3", features = ["serialize", "serde-types"] }
-quote = "1.0.37"
-rand = "0.9.1"
-rand_chacha = "0.9"
+openssl = { version = "0.10.75" }
+opentelemetry = { version = "0.31", features = ["trace"] }
+opentelemetry-appender-tracing = { version = "0.31" }
+opentelemetry-http = "0.31"
+opentelemetry-stdout = { version = "0.31" }
+opentelemetry_sdk = "0.31"
+pin-project = "1.1"
+proc-macro2 = "1.0.106"
+quick-xml = { version = "0.39.0", features = ["serialize", "serde-types"] }
+quote = "1.0.44"
+rand = { version = "0.10.0", features = ["sys_rng"] }
+rand_chacha = "0.10"
 reqwest = { version = "0.13.2", features = [
   "stream",
 ], default-features = false }
-rust_decimal = "1.37.2"
+rust_decimal = "1.40.0"
 rustc_version = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_amqp = { version = "0.14", features = ["uuid"] }
 serde_bytes = { version = "0.11" }
-serde_json = "1.0"
+serde_json = "1.0.149"
 serde_test = "1"
-serial_test = "3.0"
+serial_test = "3.3"
 sha2 = { version = "0.10" }
-syn = { version = "2.0.87", features = ["full"] }
+syn = { version = "2.0.115", features = ["full"] }
 tar = { version = "0.4.44", default-features = false }
-thiserror = "1.0"
+thiserror = "2.0"
 time = { version = "0.3.47", features = [
   "serde-well-known",
   "macros",
   "wasm-bindgen",
 ] }
-tokio = { version = "1.0", default-features = false, features = [
+tokio = { version = "1.49", default-features = false, features = [
   "macros",
   "time",
 ] }
-tracing = "0.1.40"
+tracing = "0.1.44"
 tracing-subscriber = "0.3"
-url = "2.2"
-uuid = { version = "1.18", features = ["v4"] }
+url = "2.5"
+uuid = { version = "1.20", features = ["v4"] }
 wasm-bindgen-futures = "0.4"
 wasm-bindgen-test = "0.3"
-zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
+zip = { version = "7.4.0", default-features = false, features = ["deflate"] }
 
 [workspace.lints.clippy]
 large_futures = "deny"
