--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -18,7 +18,6 @@ async-lock.workspace = true
 async-trait.workspace = true
 azure_core = { workspace = true, features = ["reqwest"] }
 futures.workspace = true
-hyper-util.workspace = true
 pin-project.workspace = true
 serde.workspace = true
 serde_json.workspace = true
@@ -26,6 +25,9 @@ tracing.workspace = true
 url.workspace = true
 
 reqwest.workspace = true
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+hyper-util.workspace = true
 
 [dev-dependencies]
 azure_core_test = { workspace = true, features = ["tracing"] }
