--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -16,10 +16,10 @@ categories = ["api-bindings"]
 [dependencies]
 async-lock.workspace = true
 async-trait.workspace = true
-azure_core = { workspace = true, features = ["reqwest"] }
+azure_core.workspace = true
 futures.workspace = true
 pin-project.workspace = true
-reqwest.workspace = true
+reqwest = { workspace = true, optional = true }
 serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
@@ -38,12 +38,13 @@ tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 workspace = true
 
 [features]
-default = ["hmac_rust"]
+default = ["hmac_rust", "reqwest"]
+reqwest = ["dep:reqwest", "azure_core/reqwest"]
 key_auth = [
 ] # Enables support for key-based authentication (Primary Keys and Resource Tokens)
 hmac_rust = ["azure_core/hmac_rust"]
 hmac_openssl = ["azure_core/hmac_openssl"]
-fault_injection = [] # Enables support for fault injection testing
+fault_injection = ["reqwest"] # Enables support for fault injection testing
 
 [package.metadata.docs.rs]
 features = [
