--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ opentelemetry = { version = "0.31", features = ["trace"] }
 opentelemetry-appender-tracing = { version = "0.31" }
 opentelemetry-stdout = { version = "0.31" }
 opentelemetry_sdk = "0.31"
+percent-encoding = "2.3"
 pin-project = "1.1"
 proc-macro2 = "1.0.106"
 quick-xml = { version = "0.39.0", features = ["serialize", "serde-types"] }
