Revert "Reacting to first code review comments"
This reverts commit f7923917fdb29dcaba7a6c84fcc4f13183d45194.

--- a/sdk/cosmos/azure_data_cosmos_driver/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_driver/Cargo.toml
@@ -10,7 +10,7 @@ repository.workspace = true
 rust-version.workspace = true
 homepage = "https://github.com/azure/azure-sdk-for-rust"
 documentation = "https://docs.rs/azure_data_cosmos_driver"
-keywords = ["sdk", "internal"]
+keywords = ["sdk", "azure", "cosmos", "driver", "internal"]
 categories = ["api-bindings"]
 publish = false # Internal implementation layer, not yet ready for crates.io
 
