Connection Errors Retry Policy (#3752)
# Connection error retry policies for Cosmos DB client

Adds transport-level error classification and retry logic to the Cosmos
DB client retry policy, enabling safe retries for connection failures
(reads **and** writes) and read-only retries for response timeouts. Also
  configures default HTTP client timeouts for `reqwest`.

   ## Motivation

Previously, the retry policy only handled HTTP-level errors (status
codes like 429, 503, etc.). Transport-level failures — connection
refused, DNS errors, response timeouts — were not classified or retried,
causing
  unnecessary request failures especially in multi-region deployments.

   ## Architecture

   ### Request Sent Status Classification

   ```
   ┌──────────────────────────────────────────────────────┐
   │              azure_core::Error received               │
   └──────────────────────┬───────────────────────────────┘
                          │
                          ▼
              ┌───────────────────────┐
              │  Walk source() chain  │
              │  for reqwest::Error   │
              └───────────┬───────────┘
                          │
               ┌──────────┼──────────┐
               ▼          ▼          ▼
        is_connect()  is_timeout() is_decode()/
            │             │        is_status()
            ▼             ▼          │
        ┌────────┐  ┌─────────┐     ▼
        │NotSent │  │ Unknown │  ┌──────┐
        └────────┘  └─────────┘  │ Sent │
                                 └──────┘
   ```

- **`NotSent`** — request never reached the server (connection refused,
DNS failure). Safe to retry both reads and writes.
- **`Sent`** — response was received (decode error, redirect, status).
Write may have been applied.
- **`Unknown`** — ambiguous (response timeout, body error). Only safe to
retry reads.

   ### Connection Failure Retry Flow

   ```
   ┌─────────────────────┐
   │  Connection Error    │
   │  (NotSent)           │
   └──────

--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -19,6 +19,7 @@ async-trait.workspace = true
 azure_core.workspace = true
 futures.workspace = true
 pin-project.workspace = true
+reqwest = { workspace = true, optional = true }
 serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
@@ -37,7 +38,8 @@ tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 workspace = true
 
 [features]
-default = ["hmac_rust"]
+default = ["hmac_rust", "reqwest"]
+reqwest = ["dep:reqwest", "azure_core/reqwest"]
 key_auth = [
 ] # Enables support for key-based authentication (Primary Keys and Resource Tokens)
 hmac_rust = ["azure_core/hmac_rust"]
